exports[`test should render 1 start theme display 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render 2 start theme displays 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render 3 start theme displays 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render a comment 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <ItemComment
      isTruncated={false}
      text="comment"
      textStyle="attention" />
  </div>
</div>
`;

exports[`test should render a default component 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body" />
</div>
`;

exports[`test should render a end accessory 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body" />
  <div
    className="accessory accessory-alignCenter">
    <img
      alt="Graphic" />
  </div>
</div>
`;

exports[`test should render a start accessory 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="accessory accessory-alignCenter">
    <img
      alt="Graphic" />
  </div>
  <div
    className="body" />
</div>
`;

exports[`test should render an accessory center aligned 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="accessory accessory-alignCenter">
    <img
      alt="Graphic" />
  </div>
  <div
    className="body" />
</div>
`;

exports[`test should render an accessory top aligned 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="accessory accessory-alignTop">
    <img
      alt="Graphic" />
  </div>
  <div
    className="body" />
</div>
`;

exports[`test should render one column 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render truncated display 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={true}
            text="display1display1display1display1display1display1display1display1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render two columns with 8 displays 1`] = `
<div
  className="item-view twoColumns">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 3" />
        </div>
        <div
          className="content content-secondarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 4" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 5" />
        </div>
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 6" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 7" />
        </div>
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 8" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render two columns with odd number of displays 1`] = `
<div
  className="item-view twoColumns">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with 1 display 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with 2 displays 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with 3 displays 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-primaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 2" />
        </div>
      </div>
      <div
        className="row">
        <div
          className="content content-secondarySize content-secondaryColor">
          <ItemDisplay
            isTruncated={false}
            text="display 3" />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should render with a display and graphic 1`] = `
<div
  className="item-view oneColumn">
  <div
    className="body">
    <div
      className="row-container">
      <div
        className="row">
        <div
          className="content content-primarySize content-primaryColor">
          <ItemDisplay
            icon={
              <img
                alt="Graphic" />
            }
            isTruncated={false}
            text="display 1" />
        </div>
      </div>
    </div>
  </div>
</div>
`;
